--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
       </button>
  
-      <a class="pull-left" href="https://mohamed-yahya-cs.github.io/"><img src="logo.png"></a>
+      <a class="pull-left" href="https://mohamed-yahya-cs.github.io/"><img src="logo.jpg"></a>
     </div>
  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
