--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <div class="container">
  
 <div class="page-header">
-<h1 style="font-family:verdana;">Kadem AL-saher</h1>
+<h1 style="font-family:verdana;">Kazem AL-saher</h1>
      </div>
 </div> 
 
