--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div class="item">
   <div class="slide3"></div>
   <div class="carousel-caption"><br>
-  <h1>THe most famous </h1>
+  <h1>The Most Famous </h1>
   
   </div>
   </div>
