--- a/discography.html
+++ b/discography.html
@@ -95,8 +95,28 @@
 </nav>
 
 <br>
+  
+<div class="container">
+ 
+<div class="page-header">
+<h1 style="font-family:cursive;">All the websites that present his songs</h1>
+     </div>
+</div>   
     
-   
+ 
+ 
+
+
+<h3>Check this websites below for his albums</h3><br>
+<a href="http://www.allmusic.com/artist/kazem-al-saher-mn0000309985/discography" class="btn btn-default btn-lg" role="button">Link 1</a>
+<a href="http://www.tarabyon.com/en/artist.asp?artistid=266" class="btn btn-default btn-lg" role="button">Link 2</a>
+<a href="https://www.discogs.com/artist/721550-Kazem-Al-Saher" class="btn btn-default btn-lg" role="button">Link 3</a>
+<a href="http://www.mtv.com/artists/kazem-al-saher-1/discography/" class="btn btn-default btn-lg" role="button">Link 4</a>
+<a href="http://www.farfesh.com/ViewSongsEnglish.asp?CatId=1&SingerID=161" class="btn btn-default btn-lg" role="button">Link 5</a>
+<br>
+<p>Just Chose the song that you want from a lot of wonderfull songs</p>
+
+     
 
 
 
