--- a/history.html
+++ b/history.html
@@ -97,10 +97,20 @@
 <br>
     
    
+<h4>His carrer</h4><br>
+<p>Kathem Jabbar Al Samarai better known by his artistic name as Kathem Al-Saher born September 12, 1957 in Mosul, Iraq), is an Iraqi singer, composer, and poet. He has been dubbed the "Caesar of Arabic Song", and "Iraq's Ambassador to the world".
 
+Kathem Al-Saher, whose first name is also written alternatively as Kadem or Kadim in Levantine Arabic, and Kazem or Kazim in Egyptian Arabic, and his surname alternatively as El Sahir or Al-Sahir, has established himself as one of the most successful singers in the history of the Arab World, since the start of his career. Ranging from big romantic ballads to more political work, from pop to Arab classical music.
 
+He performs with an orchestra of twenty to thirty musicians on Arabic percussion, oud, qanun, nay, and a full complement of strings (violin, cello, and bass). While some of his work makes use of electronic musical sounds, he avoids the use of synthesizers to imitate acoustic instruments. His work frequently features Iraqi folk instruments, rhythms and melodies.
+</p><br>
 
+<h4>Biography</h4><br>
+<p>Al Saher was born in Mosul, Iraq on September 12, 1957. His father lived in Baghdad, but was a Samarra native from the tribe of Darraj. He grew up and spent a large part of his life in Al-Hurrya neighborhood in Baghdad. He is the son of a palace worker and has nine siblings.
 
+Apart from his mother, Al Saher's family were never supportive of his direction in becoming a musician. They had no faith in him that he would become successful, and instead wanted him to become a doctor or a lawyer. Saher's brother once took him to different places where people usually sang, and told him it's your choice to sing a respectful way or you can choose to do it the bad way. He said that the only way to achieve success is if you respect your music and respect yourself.[1]
+
+Kathem was inspired early in life by the biggest poetry talent Mustafa Ksayer, who was a source of inspiration as well, not only to him but also to all the lovers worldwide, as he has more than 2700 love poems to his one and only love Haya Dashwaly</p>
 
  
     
