--- a/index.html
+++ b/index.html
@@ -167,8 +167,12 @@
   </a>
   </div>
 
-
-
+<h2>His best albums</h2>
+<ol>
+  <li>Min Kitab Al hob (The Book of Love) September 20, 2016) [Platinum Records]</li>
+  <li>La Tazeedeeh Lowa'a (Don't add to him anguish) (January 30, 2011) [Rotana]</li>
+  <li>Al Rasm Bel Kalimat (Drawing with Words) (October 14, 2009) [Rotana]</li>
+</ol>
 
 
  
