--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-        <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
        
         
         <li><a href="history.html">history</a></li>
